--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
   
 name: ive_flutter_core_mobile
 description: Core assets for InnoVet Europe Flutter projects
-version: 1.0.7
+version: 1.0.8
 author: InnoVet Europe
 homepage: https://www.innovetusa.com/
 
@@ -17,17 +17,22 @@ dependencies:
   flutter_spinkit: ^4.1.2+1 #updated on May 7 from 3.1.0 
   geolocator: ^5.3.1
   json_annotation: ^3.0.0
+  intl: ^0.16.1
   sqflite: ^1.3.0+1 #updated on May 7 from 1.3.0
   path_provider: ^1.6.7 #updated on May 7 from 1.6.5
   photo_view: ^0.9.2 #updated on May 7 from 0.4.2
   qr_flutter: ^3.2.0  #updated on May 7 from 2.1.0+55
   shared_preferences: ^0.5.7+1  #updated on May 7 from 0.5.6+3
+
+  ive_flutter_core: 
+    git:
+      url: git://github.com/InnoVet-Europe/ive_flutter_core.git
+      ref: ef06ad935d79991bcad62c8c945d39e9eeae330f # 8 May 2020 # 10 Apr 2020
   
 dev_dependencies:
   build_runner: ^1.8.1
   flutter_test:
     sdk: flutter
-  intl_translation: ^0.17.9
   json_serializable: ^3.3.0
 
 flutter:
