--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,13 @@
   
 name: ive_flutter_core_mobile
 description: Core assets for InnoVet Europe Flutter projects
-version: 1.0.19
+version: 1.0.20
 author: InnoVet Europe
 homepage: https://www.innovetusa.com/
 
 environment:
-  sdk: ">=2.6.0 <3.0.0"
-  flutter: ">=0.1.4 <3.0.0"
+  sdk: ">=2.9.0-0.0 <3.0.0"
+  flutter: ^1.20.2
 
 dependencies:
   flutter:
@@ -18,6 +18,6 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^1.10.1 # updated 05 Aug 2020 from 1.10.0 # updated on 21 Jun 2020 from 1.8.1
-  json_serializable: ^3.3.0
+  json_serializable: ^3.4.0 # updated 17 Aug 2020 from 3.3.0
 
 flutter:
