--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
   
 name: ive_flutter_core_mobile
 description: Core assets for InnoVet Europe Flutter projects
-version: 1.0.30
+version: 1.0.31
 author: InnoVet Europe
 homepage: https://www.innovetusa.com/
 
@@ -13,11 +13,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-  sqflite: ^1.3.1 # updated on 21 Jun 2020 from 1.3.0+1 #updated on May 7 from 1.3.0
-  path_provider: ^1.6.11 # updated on 21 Jun 2020 from 1.6.7 #updated on May 7 from 1.6.5
+  sqflite: ^1.3.1+2  # updated on 22 Oct 2020 from 1.3.1 # updated on 21 Jun 2020 from 1.3.0+1 #updated on May 7 from 1.3.0
+  path_provider: ^1.6.21  # updated on 22 Oct 2020 from 1.6.11 # updated on 21 Jun 2020 from 1.6.7 #updated on May 7 from 1.6.5
 
 dev_dependencies:
-  build_runner: ^1.10.1 # updated 05 Aug 2020 from 1.10.0 # updated on 21 Jun 2020 from 1.8.1
-  json_serializable: ^3.4.0 # updated 17 Aug 2020 from 3.3.0
+  build_runner: ^1.10.3  # updated on 22 Oct 2020 from 1.10.1 # updated 05 Aug 2020 from 1.10.0 # updated on 21 Jun 2020 from 1.8.1
+  json_serializable: ^3.5.0 # updated on 22 Oct 2020 from 3.4.0 # updated 17 Aug 2020 from 3.3.0
 
 flutter:
