--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,23 +1,24 @@
   
 name: ive_flutter_core_mobile
 description: Core assets for InnoVet Europe Flutter projects
-version: 1.0.33
+version: 1.1.0+1
 author: InnoVet Europe
 homepage: https://www.innovetusa.com/
+publish_to: none
 
 environment:
-  sdk: ">=2.7.0-0.0 <3.0.0"
-  flutter: ^1.22.2
+  sdk: ">=2.12.0 <3.0.0"
+  flutter: ^2.0.3
 
 dependencies:
   flutter:
     sdk: flutter
 
-  sqflite: ^1.3.1+2  # updated on 22 Oct 2020 from 1.3.1 # updated on 21 Jun 2020 from 1.3.0+1 #updated on May 7 from 1.3.0
-  path_provider: ^1.6.21  # updated on 22 Oct 2020 from 1.6.11 # updated on 21 Jun 2020 from 1.6.7 #updated on May 7 from 1.6.5
+  intl: ^0.17.0 # updated on Mar 25, 21 from 0.17.0-nullsafety.2
+  sqflite: ^2.0.0+3  # updated on 22 Oct 2020 from 1.3.1 # updated on 21 Jun 2020 from 1.3.0+1 #updated on May 7 from 1.3.0
+  path_provider: ^2.0.1  # updated on 22 Oct 2020 from 1.6.11 # updated on 21 Jun 2020 from 1.6.7 #updated on May 7 from 1.6.5
 
 dev_dependencies:
-  build_runner: ^1.10.3  # updated on 22 Oct 2020 from 1.10.1 # updated 05 Aug 2020 from 1.10.0 # updated on 21 Jun 2020 from 1.8.1
-  json_serializable: ^3.5.0 # updated on 22 Oct 2020 from 3.4.0 # updated 17 Aug 2020 from 3.3.0
-
-flutter:
+  build_runner: ^1.12.2 # updated on Mar 25, 21 from 1.10.3  # updated on 22 Oct 2020 from 1.10.1 # updated 05 Aug 2020 from 1.10.0 # updated on 21 Jun 2020 from 1.8.1
+  json_serializable: ^4.1.0 # updated on 25 Mar 2021 from 3.5.0  # updated on 22 Oct 2020 from 3.4.0 # updated 17 Aug 2020 from 3.3.0
+  freezed: ^0.14.1+1
