--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,13 @@
   
 name: ive_flutter_core_mobile
 description: Core assets for InnoVet Europe Flutter projects
-version: 1.1.0+2
-author: InnoVet Europe
-homepage: https://www.innovetusa.com/
+version: 1.1.1
+homepage: https://www.harriercentral.com/
 publish_to: none
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ^2.0.3
+  sdk: ">=2.14.3 <3.0.0"
+  flutter: ^2.5.2
 
 dependencies:
   flutter:
@@ -19,6 +18,6 @@ dependencies:
   path_provider: ^2.0.1  # updated on 22 Oct 2020 from 1.6.11 # updated on 21 Jun 2020 from 1.6.7 #updated on May 7 from 1.6.5
 
 dev_dependencies:
-  build_runner: ^1.12.2 # updated on Mar 25, 21 from 1.10.3  # updated on 22 Oct 2020 from 1.10.1 # updated 05 Aug 2020 from 1.10.0 # updated on 21 Jun 2020 from 1.8.1
-  json_serializable: ^4.1.0 # updated on 25 Mar 2021 from 3.5.0  # updated on 22 Oct 2020 from 3.4.0 # updated 17 Aug 2020 from 3.3.0
-  freezed: ^0.14.1+1
+  build_runner: ^2.1.4 # updated on Mar 25, 21 from 1.10.3  # updated on 22 Oct 2020 from 1.10.1 # updated 05 Aug 2020 from 1.10.0 # updated on 21 Jun 2020 from 1.8.1
+  json_serializable: ^6.0.1 # updated on 25 Mar 2021 from 3.5.0  # updated on 22 Oct 2020 from 3.4.0 # updated 17 Aug 2020 from 3.3.0
+  freezed: ^0.15.0+1
