--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
     sdk: flutter
 
   intl: ^0.17.0 # updated on Mar 25, 21 from 0.17.0-nullsafety.2
-  sqflite: ^2.0.0+3  # updated on 22 Oct 2020 from 1.3.1 # updated on 21 Jun 2020 from 1.3.0+1 #updated on May 7 from 1.3.0
+  sqflite: ^2.0.3  # updated on 22 Oct 2020 from 1.3.1 # updated on 21 Jun 2020 from 1.3.0+1 #updated on May 7 from 1.3.0
   path_provider: ^2.0.11  # updated on 22 Oct 2020 from 1.6.11 # updated on 21 Jun 2020 from 1.6.7 #updated on May 7 from 1.6.5
 
 dev_dependencies:
