--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,23 +1,23 @@
   
 name: ive_flutter_core_mobile
 description: Core assets for InnoVet Europe Flutter projects
-version: 1.1.8
+version: 1.2.0
 homepage: https://www.harriercentral.com/
 publish_to: none
 
 environment:
   sdk: ">=2.14.3 <3.0.0"
-  flutter: ^3.0.5
+  flutter: ^3.7.7
 
 dependencies:
   flutter:
     sdk: flutter
 
-  intl: ^0.17.0 # updated on Mar 25, 21 from 0.17.0-nullsafety.2
-  sqflite: ^2.0.3  # updated on 22 Oct 2020 from 1.3.1 # updated on 21 Jun 2020 from 1.3.0+1 #updated on May 7 from 1.3.0
-  path_provider: ^2.0.11  # updated on 22 Oct 2020 from 1.6.11 # updated on 21 Jun 2020 from 1.6.7 #updated on May 7 from 1.6.5
+  intl: ^0.18.0 
+  sqflite: ^2.2.5
+  path_provider: ^2.0.13 
 
 dev_dependencies:
-  build_runner: ^2.1.11 # updated on Mar 25, 21 from 1.10.3  # updated on 22 Oct 2020 from 1.10.1 # updated 05 Aug 2020 from 1.10.0 # updated on 21 Jun 2020 from 1.8.1
-  json_serializable: ^6.2.0 # updated on 25 Mar 2021 from 3.5.0  # updated on 22 Oct 2020 from 3.4.0 # updated 17 Aug 2020 from 3.3.0
-  freezed: ^2.0.4
+  build_runner: ^2.3.3
+  json_serializable: ^6.6.1
+  freezed: ^2.3.2
