--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,23 +1,59 @@
   
 name: ive_flutter_core_mobile
 description: Core assets for InnoVet Europe Flutter projects
-version: 1.2.2
+version: 1.2.3
 homepage: https://www.harriercentral.com/
 publish_to: none
 
 environment:
-  sdk: ">=2.15.0 <3.0.0"
-  flutter: ^3.13.9
+  sdk: ">=2.12.0 <3.0.0"
+  flutter: ^3.7.12
 
 dependencies:
   flutter:
     sdk: flutter
 
   intl: 0.18.1 
-  sqflite: 2.3.0
+  sqflite: 2.2.8+4
   path_provider: 2.1.1 
 
 dev_dependencies:
-  build_runner: 2.4.6
-  json_serializable: 6.7.1
+  build_runner: 2.3.3
+  json_annotation: 4.8.1
   freezed: 2.4.5
+
+dependency_overrides:
+  meta: 1.8.0
+
+
+    
+# name: ive_flutter_core
+# description: Core assets for InnoVet Europe Flutter projects
+# version: 1.2.3
+# homepage: https://www.harriercentral.com/
+# publish_to: none
+
+# environment:
+#   sdk: ">=2.12.0 <3.0.0"
+#   flutter: ^3.7.12
+
+# dependencies:
+#   flutter:
+#     sdk: flutter
+
+#   flutter_spinkit: 5.2.0 
+#   freezed_annotation: 2.4.1
+#   intl: 0.18.1
+#   json_annotation: 4.8.1
+#   photo_view: 0.14.0 
+#   qr_flutter: 4.1.0 
+  
+# dependency_overrides:
+#   meta: 1.8.0
+  
+# dev_dependencies:
+#   build_runner: 2.3.3
+#   freezed: 2.4.5
+#   json_serializable: 6.6.2
+
+
