--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,26 +1,26 @@
   
 name: ive_flutter_core_mobile
 description: Core assets for InnoVet Europe Flutter projects
-version: 1.2.3
+version: 1.2.4
 homepage: https://www.harriercentral.com/
 publish_to: none
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ^3.7.12
+  sdk: '>=3.3.1 <4.0.0'
+  flutter: 3.22.2
 
 dependencies:
   flutter:
     sdk: flutter
 
-  intl: 0.18.1 
-  sqflite: 2.2.8+4
-  path_provider: 2.1.1 
+  intl: ^0.19.0 
+  sqflite: ^2.3.3+1
+  path_provider: ^2.1.3 
 
 dev_dependencies:
-  build_runner: 2.3.3
-  json_annotation: 4.8.1
-  freezed: 2.4.5
+  build_runner: ^2.4.11
+  json_annotation: ^4.9.0
+  freezed: ^2.5.3
 
 dependency_overrides:
   meta: 1.8.0
