--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,26 +1,23 @@
   
 name: ive_flutter_core_mobile
 description: Core assets for InnoVet Europe Flutter projects
-version: 1.2.6
+version: 1.2.8
 homepage: https://www.harriercentral.com/
 publish_to: none
 
 environment:
-  sdk: '>=3.3.1 <4.0.0'
-  flutter: ^3.24.3
+  sdk: '>=3.7.0 <4.0.0'
+  flutter: ^3.29.2
 
 dependencies:
   flutter:
     sdk: flutter
-
-  intl: ^0.19.0 
-  sqflite: ^2.3.3+1
-  path_provider: ^2.1.3 
+  intl: ^0.20.2
+  sqflite: ^2.4.2
+  path_provider: ^2.1.5
 
 dev_dependencies:
-  build_runner: ^2.4.11
-  json_annotation: ^4.9.0
-  freezed: ^2.5.3
+  
 
 dependency_overrides:
   # meta: 1.8.0
