--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
   
 name: ive_flutter_core_mobile
 description: Core assets for InnoVet Europe Flutter projects
-version: 1.2.13
+version: 1.2.14
 homepage: https://www.harriercentral.com/
 publish_to: none
 
@@ -16,7 +16,8 @@ dependencies:
   sqflite: ^2.4.2
   path_provider: ^2.1.5
 
-# dev_dependencies:
+dev_dependencies:
+  flutter_lints: ^6.0.0
   
 
 # dependency_overrides:
